# Betrock

./: .gitignore  .gitmodules  Betrock.desktop  CMakeLists.txt  README.md  imgui.ini
saves/404/: level.dat_old
saves/404/region/: mcr.py
saves/publicbeta/DIM-1/region/: r.-1.0.mcr
saves/publicbeta/region/: r.0.1.mcr
src/: chunk.cpp  config.h  debug.cpp  debug.h  glad.c  global.h  helper.cpp  helper.h  main.cpp  main.h  nbt.cpp  nbt.h  nbttag.cpp  nbttag.h  oldmain.cpp  region.cpp  region.h  regionLoader.cpp  regionLoader.h  version.h  version.h.in
src/include/: glad.c  stb_include.cpp
src/include/glad/: glad.h
src/mechanics/: options.h
src/model/: chunkBuilder.cpp  chunkBuilder.h  chunkMesh.h  dummyMesh.h  model.cpp  model.h  obj.cpp  obj.h
src/models/: block.blend  block.blend1  block.gltf
src/nbt/: nbt.cpp  nbt.h  nbttag.h
src/render/: camera.cpp  camera.h  ebo.cpp  ebo.h  mesh.cpp  mesh.h  shader.cpp  shader.h  sky.cpp  sky.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/shader/: default.frag  default.fsh  default.vert  default.vsh  ebo.cpp  light.vert  minecraft.frag  minecraft.fsh  normal.fsh  vao.cpp  vao.h
src/shaders/: fragment.h
src/src/: glad.c
src/texture/: texture.cpp  texture.h
src/world/: block.cpp  block.h  blockProperties.cpp  blockProperties.h  chunk.cpp  chunk.h  chunkManager.h  generator.cpp  generator.h  region.cpp  region.h  regionLoader.cpp  regionLoader.h  world.cpp  world.h
world/region/: r.-1.0.mcr  r.0.-1.mcr
